<resources>
    <string name="app_name">我的第一个应用</string>
    <string name="Hello_World">我喜欢Android开发!</string>
    <string name="Hello_Android">你好Android</string>

    <string name="Hello_World_CN">你好世界!</string>
    <string name="Hello_World_EN">Hello_world!</string>

    <string name="Language_CN">语言</string>
    <string name="Language_Change_CN">改变语言</string>
    <string name="Language_EN">Language</string>
    <string name="Language_Change_EN">Change language</string>
    <string name="Language_KR">언어</string>
    <string name="Language_Change_KR">언어 변경</string>
    <string name="Language_JP">言語</string>
    <string name="Language_Change_JP">言語を変更する</string>

</resources>
